fixing cross prob